--- a/travelRuski/MainWindow.xaml
+++ b/travelRuski/MainWindow.xaml
@@ -5,11 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:travelRuski"
         mc:Ignorable="d"
-        Title="Путешествуй по России" Background="#634e42" Height="450" Width="800" MinHeight="500" MinWidth="800">
+        Title="Путешествуй по России" Background="#878787" Height="450" Width="800" MinHeight="500" MinWidth="800">
     <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="FontSize" Value="24"/>
-            <Setter Property="FontFamily" Value="Comic Sans MS"/>
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="TextAlignment" Value="Center"/>
